Weird bug fix: Made the contact filter input width auto when mobile. On mobile when rotating from landscape to portrait the page becomes too wide without this fix

--- a/app/assets/stylesheets/frontend/views/_contact_groups.scss
+++ b/app/assets/stylesheets/frontend/views/_contact_groups.scss
@@ -17,6 +17,10 @@
       width: 50%;
       margin: 7px 10px 3px;
 
+      @include media(mobile) {
+        width: auto;
+      }
+
       @include ie-lte(7) {
         position: relative;
         top: 5px;
